<resources>
    <string name="app_name">记号</string>
    <string name="input_activity">添加账户信息</string>
    <string name="tab_text_1">账户</string>
    <string name="tab_text_2">发现</string>
    <string name="account_name">名称</string>
    <string name="account_name_hint">请输入您的账户名</string>
    <string name="user_name">账号</string>
    <string name="user_name_hint">请输入您的账号</string>
    <string name="password">密码</string>
    <string name="password_hint">请输入您的密码</string>
    <string name="note">备注</string>
    <string name="note_hint">请输入备注</string>
    <string name="save_button">保存</string>
</resources>
